force-app/main/default/objects/PDRI__VCS_Repo_Folder__c/PDRI__VCS_Repo_Folder__c.object-meta.xml
<CustomObject>
    <label>VCS Repo Folder</label>
    <nameField>
        <displayFormat>VF-{0000000}</displayFormat>
        <label>VCS Repo Folder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCS Repo Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>