force-app/main/default/objects/PDRI__VCS_Repo_Folder__c/fields/PDRI__Default__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>