force-app/main/default/objects/PDRI__VCS_Repo_Folder__c/fields/PDRI__Path__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Path__c</fullName>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>