force-app/main/default/objects/PDRI__VCS_Repo_Folder__c/fields/PDRI__Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metadata</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>